<resources>
    <string name="app_name">QuickBitez</string>
    <string name="menu">Menu</string>
    <string name="burger_label">Burger</string>
    <string name="fries_label">Fries</string>
    <string name="drink_label">Drink</string>
    <string name="cart">Cart</string>
    <string name="burger_cart_item">Burger x2</string>
    <string name="fries_cart_item">Fries x1</string>
    <string name="profile">Profile</string>
    <string name="name_label">Name: John Doe</string>
    <string name="email_label">Email: john.doe@example.com</string>
    <string name="cart_activity">Cart Activity</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="profile_picture">Profile Picture</string>


</resources>